# retry-lib

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
retry_lib/: __init__.py  retry.py
tests/: test_retry.py
