[tool.poetry]
name = "retry-lib"
version = "0.1.0"
description = "Biblioteca Python para retry automático de funções com logging"
authors = ["Seu Nome <seuemail@email.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
